HW06 corrections after review